# MyExercises

./: FloatNum.cpp  README.md  check.txt  main.cpp
Intersection/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Intersection.sln  Intersection.vcxproj  Intersection.vcxproj.filters  Methods.hpp  Methods1.hpp  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Structs.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  input.txt  main.cpp
ModernC++AndHeadache/Ex1/: CMakeLists.txt  ctad.cppm  def.cppm  ex1.cppm  main.cpp
ModernC++AndHeadache/Meta/: main.cpp  meta.hpp
ModernC++AndHeadache/Meta/15/: Person.cppm
ModernC++AndHeadache/Meta/17/: main.cpp  one.cpp
ModernC++AndHeadache/forexam/: CMakeLists.txt  def.cppm  hash.cppm  main.cpp  test.cpp
SSS/: SSS.cpp  SSS.hpp  mainforSSS.cpp
matrix/: CmakeLists.txt  input.txt  main.cpp  matrix.hpp  operations.hpp  rational.cpp  rational.hpp
matrix/1/html/: class_math_1_1_matrix-members.html  class_math_1_1_matrix.html  matrix_8hpp_source.html
matrix/1/latex/: files.tex  matrix_8hpp_source.tex  refman.tex
matrix/html/: annotated.html  classes.html  files.html
matrix/latex/: annotated.tex  class_math_1_1_matrix.tex
(+19 files in other folders)
